fix mobile alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -83,12 +83,12 @@ h1 {
 
 @media only screen and (orientation: portrait){
 .image-bubble {
-  width: 30%;
+  width: 50%;
   height: 30%;
  }
 
 .image-bubble:hover {
-  width: 45%;
+  width: 50%;
   height: 30%;
 }
 
@@ -125,5 +125,5 @@ h1 {
 }
 
 #six{
-  top: 120%;
+  top: 170%;
  }}
